--- a/public/lovey.html
+++ b/public/lovey.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Birthdayyy</title>
-    <link rel="icon" type="image/x-icon" href="/bdayFavicon.png">
+    <link rel="icon" type="image/x-icon" href="/images/bdayFavicon.png">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap');
         
