--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hers</title>
-    <link rel="icon" type="image/x-icon" href="/homeFavicon.png">
+    <link rel="icon" type="image/x-icon" href="/images/homeFavicon.png">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Tangerine:wght@400;700&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Tangerine:wght@400;700&display=swap');
