--- a/public/uss.html
+++ b/public/uss.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Her and Me</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <link rel="icon" type="image/x-icon" href="/ussFavicon.png">
+    <link rel="icon" type="image/x-icon" href="/images/ussFavicon.png">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap');
         *{
@@ -125,16 +125,16 @@
 <body>
     <h1>My beautiful lady and me</h1>
     <div class="collage">
-        <div class="image-container"><img src="/p10.jpg" alt="Image 1"></div>
-        <div class="image-container"><img src="/p2.jpg" alt="Image 2"></div>
-        <div class="image-container"><img src="/p3.jpg" alt="Image 3"></div>
-        <div class="image-container"><img src="/p4.jpg" alt="Image 4"></div>
-        <div class="image-container"><img src="/p5.jpg" alt="Image 5"></div>
-        <div class="image-container"><img src="/p6.jpg" alt="Image 6"></div>
-        <div class="image-container"><img src="/p7.jpg" alt="Image 7"></div>
-        <div class="image-container"><img src="/p8.jpg" alt="Image 8"></div>
-        <div class="image-container"><img src="/p9.jpg" alt="Image 9"></div>
-        <div class="image-container"><img src="/p1.jpg" alt="Image 10"></div>
+        <div class="image-container"><img src="/images/p10.jpg" alt="Image 1"></div>
+        <div class="image-container"><img src="/images/p2.jpg" alt="Image 2"></div>
+        <div class="image-container"><img src="/images/p3.jpg" alt="Image 3"></div>
+        <div class="image-container"><img src="/images/p4.jpg" alt="Image 4"></div>
+        <div class="image-container"><img src="/images/p5.jpg" alt="Image 5"></div>
+        <div class="image-container"><img src="/images/p6.jpg" alt="Image 6"></div>
+        <div class="image-container"><img src="/images/p7.jpg" alt="Image 7"></div>
+        <div class="image-container"><img src="/images/p8.jpg" alt="Image 8"></div>
+        <div class="image-container"><img src="/images/p9.jpg" alt="Image 9"></div>
+        <div class="image-container"><img src="/images/p1.jpg" alt="Image 10"></div>
     </div>
     <button class="back-button" onclick="window.location.href='/lovey'">Back</button>
     <script>
